--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <li>video games</li>
 </ol>
 <hr>
-<form class="" action="dp.png" method="post">
+<form class="" action="test.html" method="post">
   <label>rate the website </label>
   <input type="text" name="rating">
   <input type="submit" name/>
