--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <li>video games</li>
 </ol>
 <hr>
+  <h1>practicing forms</h1>
 <form class="" action="test.html" method="post">
   <label>rate the website </label>
   <input type="text" name="rating">
