--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 <table>
   <tr>
-    <td><img src="dp.png" alt="gang ka photo" height="200" title="gang"></td>
+    <td><img src="dp.png" alt="profile photo" height="200" title="gang"></td>
     <td><h1>Harsh bhanushali </h1>
-    <p><em>  EEE student at <a href="https://www.bits-pilani.ac.in/">Bits goa </a></em></p></td>
+    <p><em>  EEE student at <a href="https://www.bits-pilani.ac.in/">BITS Goa </a></em></p></td>
   </tr>
 </table>
   <hr>
-  <p>I am black belt in tae kwon do and i am learning web devlopment </p>
+  <p>I am learning web devlopment</p>
   <h3>My hobbies are:</h3>
 <ol type="A">
 <li>badminton  </li>
@@ -25,7 +25,6 @@
 <li>video games</li>
 </ol>
 <hr>
-  <h1>practicing forms</h1>
 <form class="" action="test.html" method="post">
   <label>rate the website </label>
   <input type="text" name="rating">
