--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <table>
   <tr>
     <td><img src="dp.png" alt="profile photo" height="200" title="gang"></td>
-    <td><h1>Harsh bhanushali </h1>
+    <td><h1>Harsh Bhanushali </h1>
     <p><em>  EEE student at <a href="https://www.bits-pilani.ac.in/">BITS Goa </a></em></p></td>
   </tr>
 </table>
