--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="pro-border">
       <img class="profile" src="dp.png" alt="profile photo">
       <h2>Hello.</h2>
-      <p> I am a chess player and a programmer.I am trying to learn WEBD in vaccation and master the skill in the coming time.<br>I am really excited for everyhting i will get to learn in the course.</p>
+      <p> I am a chess player and a programmer.I am trying to learn WEBD in vacation and master the skill in the coming time.<br>I am really excited for everyhting i will get to learn in the course.</p>
     </div>
     <div class="skills pro-border">
       <div class=".skills-theek">
