--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h2>My Skills.</h2>
       <h4><strong>Design & Development</strong></h4>
       <img class="computer"src="computer.png" alt="computer hona chaiyeh tha baki bhagwan malik">
-      <p class="change-width">I started to code recently but i have learnt alot in the recently and i am always increasing my knowledge about the coding world.</p>
+      <p class="change-width">I started to code recently but i have learnt alot and i am always increasing my knowledge about the coding world.</p>
       <br><br><br><br><br><br><br><br><br><br>
       <table>
         <
